Add dependencies for SpringDoc, JDBC, and H2 database; create Run table schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=firstspring
+spring.h2.console.enabled=true
+spring.datasource.generate-unique-name=false
+spring.datasource.name=firstspringdb
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/docs
