Remove unused H2 database configuration; add PostgreSQL dependencies and Docker Compose setup for PostgreSQL service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
 spring.application.name=firstspring
-spring.h2.console.enabled=true
-spring.datasource.generate-unique-name=false
-spring.datasource.name=firstspringdb
+# spring.h2.console.enabled=true
+# spring.datasource.generate-unique-name=false
+#spring.datasource.name=firstspringdb
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/docs
+
+# spring.datasource.url=jdbc:postgresql://localhost:5432/firstspringdb
+# spring.datasource.username=lihindu
+# spring.datasource.password=lihindu123
+# spring.datasource.driver-class-name=org.postgresql.Driver
+
+# # Hibernate settings
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.sql.init.mode=always
+# spring.sql.init.platform=postgres
