--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,8 @@ springdoc.swagger-ui.path=/docs
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.sql.init.mode=always
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 # spring.sql.init.platform=postgres
